--- a/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
@@ -516,6 +516,28 @@ Please note, only one group can be defined. Default = empty = no restriction.
 'collabora_group' => '',
 ....
 
+== App: S3 Primary Object Storage
+
+Possible keys: `objectstore` ARRAY
+
+=== Configure the access parameters for a particular S3 provider.
+
+The detailed configuration of that array depends on the S3 provider.
+This example can therefore only show the general construct.
+See the "S3 Compatible Object Storage as Primary Storage Location" documentation for more details.
+
+==== Code Sample
+
+[source,php]
+....
+'objectstore' => [
+	'class' => 'Implementation\Of\OCP\Files\ObjectStore\IObjectStore',
+	'arguments' => [
+		// ...
+	],
+],
+....
+
 == App: Windows Network Drive (WND)
 
 Note: This app is for Enterprise customers only.
