--- a/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
@@ -531,7 +531,7 @@ See the "S3 Compatible Object Storage as Primary Storage Location" documentation
 [source,php]
 ....
 'objectstore' => [
-	'class' => 'Implementation\Of\OCP\Files\ObjectStore\IObjectStore',
+	'class' => 'OCA\Files_Primary_S3\S3Storage',
 	'arguments' => [
 		// ...
 	],
