[10.10] [PR 711] Clarify 2FA usage with desktop and mobile apps
Backport of PR #711

--- a/modules/admin_manual/pages/configuration/user/user_auth_twofactor.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_auth_twofactor.adoc
@@ -30,7 +30,7 @@ Here you can find more information:
 
 === App Passwords / Tokens
 
-Without OAuth 2.0 App, users need to login to their ownCloud account in regular web browser first, then create an app password / tokens, which then can be used in the ownCloud Desktop and Mobile apps.
+Without the OAuth 2.0 App, users need to log in to their ownCloud account in a regular web browser first, then create an app password or tokens, which can be used in the ownCloud Desktop and Mobile apps.
 
 Here you can find more information:
 
