--- a/modules/admin_manual/pages/configuration/user/user_auth_twofactor.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_auth_twofactor.adoc
@@ -20,21 +20,19 @@ TIP: For the opt-in function to work, ImageMagick and php-imagick are required t
 
 ownCloud Desktop and Mobile Apps support 2FA login with browser-based login flows.
 
-=== Enable OAuth 2.0 App (recommended)
+NOTE: OAuth 2.0 ist the recommended authentication method for clients. 
 
-ownCloud Desktop client will open the login page in the system web browser, and ownCloud Mobile Apps will open the login page in an embedded web view. After entering the regular credentials, users will see a second page, where they need to enter the second factor.
+=== Enable OAuth 2.0 App
 
-Here you can find more information:
+When using the OAuth 2.0 App, the ownCloud Desktop client will open the login page in the system web browser and ownCloud Mobile Apps will open the login page in an embedded web view. After entering the regular credentials, users will see a second page, where they need to enter the second factor.
 
-- https://doc.owncloud.com/server/next/admin_manual/configuration/user/user_oauth2.html
+For more information see the xref:configuration/user/user_oauth2.adoc[User Auth Open Authentication (OAuth2)] documentation.
 
 === App Passwords / Tokens
 
 Without the OAuth 2.0 App, users need to log in to their ownCloud account in a regular web browser first, then create an app password or tokens, which can be used in the ownCloud Desktop and Mobile apps.
 
-Here you can find more information:
-
-- https://doc.owncloud.com/webui/next/classic_ui/personal_settings/security.html#app-passwords-tokens
+For more information see the xref:{latest-webui-version}@webui:classic_ui:personal_settings/security.adoc#app-passwords-tokens[App Passwords / Tokens] documentation.
 
 == Troubleshooting
 
