[10.11] [PR 723] Fix VirtualHost parameter
Backport of PR #723

--- a/modules/admin_manual/pages/installation/letsencrypt/apache.adoc
+++ b/modules/admin_manual/pages/installation/letsencrypt/apache.adoc
@@ -65,7 +65,7 @@ After that, add an Alias directive for the `/.well-known/acme-challenge` locatio
 
 [source,apache]
 ----
-<VirtualHost *.80>
+<VirtualHost *:80>
   ServerName mydom.tld
 
   Alias /.well-known/acme-challenge/ /var/www/letsencrypt/.well-known/acme-challenge/
