--- a/modules/admin_manual/pages/configuration/files/external_storage/configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/external_storage/configuration.adoc
@@ -140,7 +140,7 @@ You might need to setup a cron job that runs
 * Alternatively, replace `--all` with the user name to trigger a rescan of the user’s files periodically,
 for example every 15 minutes, which includes the mounted external storage.
 +
-TIP: See the xref:configuration/server/occ_command.adoc#the-filesscan-command[occ’s file operations] for more information.
+TIP: See xref:configuration/server/occ_command.adoc#the-filesscan-command[occ’s file operations] for more information.
 
 == Known limitations
 
