More improvements for S3, files scan and BG jobs

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
@@ -25,5 +25,5 @@ background
 {occ-command-example-prefix} background:webcron
 ----
 
-TIP: See xref:configuration/server/background_jobs_configuration.adoc[background jobs configuration] to learn more.
+TIP: See the xref:configuration/server/occ_command.adoc#managing-background-jobs[Managing Background Jobs] and the xref:configuration/server/background_jobs_configuration.adoc[Background Jobs configuration] to learn more.
 
