--- a/modules/admin_manual/pages/installation/apps_supported.adoc
+++ b/modules/admin_manual/pages/installation/apps_supported.adoc
@@ -34,13 +34,16 @@ NOTE: Before Files Media Viewer 1.0.4, the _Gallery_ and _Files VideoPlayer_ app
 == Enterprise-Only Apps
 
 * {oc-marketplace-url}/apps/admin_audit[Auditing]
-* {oc-marketplace-url}/apps/systemtags_management[Collaborative Tags Management]
-* {oc-marketplace-url}/apps/firewall[File Firewall]
+* {oc-marketplace-url}/apps/files_classifier[Document Classification]
 * {oc-marketplace-url}/apps/files_ldap_home[LDAP Home Connector]
+* {oc-marketplace-url}/apps/firewall[File Firewall]
 * {oc-marketplace-url}/apps/objectstore[Object Storage Support]
+* {oc-marketplace-url}/apps/openidconnect[OpenID Connect]
 * {oc-marketplace-url}/apps/password_policy[Password Policy]
 * {oc-marketplace-url}/apps/sharepoint[External Storage: SharePoint]
+* {oc-marketplace-url}/apps/systemtags_management[Collaborative Tags Management]
 * {oc-marketplace-url}/apps/user_shibboleth[SAML/Shibboleth User Backend]
 * {oc-marketplace-url}/apps/windows_network_drive[Windows Network Drives (requires External Storage)]
+* {oc-marketplace-url}/apps/wopi[Microsoft Office Online]
 * {oc-marketplace-url}/apps/workflow[Workflows]
 * {oc-marketplace-url}/themes/theme-enterprise[ownCloud X Enterprise Theme]
