--- a/modules/admin_manual/pages/configuration/user/oidc/oidc.adoc
+++ b/modules/admin_manual/pages/configuration/user/oidc/oidc.adoc
@@ -175,7 +175,7 @@ NOTE: The desktop and mobile apps (clients) have a default client ID and secret 
 
 === Client IDs, Secrets and Redirect URIs
 
-All IdPs can use ownCloud's default implemented _Client IDs, Secrets and Redirect URIs_ with the exception of Microsoft Azure AD, which uses a different approach. Here is the data necessary for the configuration.
+All IdPs can use ownCloud's default _client IDs, secrets and redirect URIs_ with the exception of Microsoft Azure AD, which uses a different approach. Here is the data necessary for the configuration.
 
 ==== Client ID
 
