config-to-docs update from review

--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -1003,7 +1003,7 @@ Available values:
 Save additional metadata (author, version tag, etc.) of each version of uploaded and edited files.
 
 WARNING: This feature CANNOT be temporarily disabled once enabled.
-Consequitive enabling would require repair job that erases all extended versions metadata.
+Disabling and re-enabling would require a repair job that erases all extended versions metadata.
 WARNING: This does not work for S3 storage backends.
 
 ==== Code Sample
