[10.10] [PR 891] Remove OneDrive from the documentation
Backport of PR #891

--- a/modules/admin_manual/pages/enterprise/external_storage/index.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/index.adoc
@@ -1,4 +1,5 @@
 :section-title: External Storage
 :section-preamble-ender: to configure enterprise external storage in ownCloud
+:page-aliases: enterprise/external_storage/onedrive.adoc
 
 include::partial$section_page.adoc[]
