[10.12] [PR 899] Update file_versioning.adoc
Backport of PR #899

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_versions_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_versions_commands.adoc
@@ -5,8 +5,7 @@ These commands are not available in xref:maintenance-commands[single-user (maint
 
 == versions:cleanup
 
-`versions:cleanup` can delete all versioned files, as well as the
-`files_versions` folder, for either specific users, or for all users.
+`versions:cleanup` can delete all versioned files, as well as the `files_versions` folder, for either specific users, or for all users. A Published version persists until the original file is deleted by somebody with such permission or via the `occ versions:cleanup` command.
 
 [source,bash,subs="attributes+"]
 ----
